--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -23,7 +23,14 @@ bases:
 # [PROMETHEUS] To enable prometheus monitor, uncomment all sections with 'PROMETHEUS'. 
 #- ../prometheus
 
+
+configMapGenerator:	
+- name: known-hosts
+  files:
+  - known_hosts
+
 patchesStrategicMerge:
+- ssh_key_patch.yaml
   # Protect the /metrics endpoint by putting it behind auth.
   # Only one of manager_auth_proxy_patch.yaml and
   # manager_prometheus_metrics_patch.yaml should be enabled.
