updated hashes resolves #13 (#14)
* updated tags to tag
* add enum tag and evaluation of optype prior to map lookup
* updated image

--- a/config/crd/bases/git.gitops.slipway.org_hashes.yaml
+++ b/config/crd/bases/git.gitops.slipway.org_hashes.yaml
@@ -52,6 +52,10 @@ spec:
                     type: string
                   optype:
                     description: Type of Operation kubebuilder:validation:MinLength=1
+                    enum:
+                    - tag
+                    - branch
+                    - pull
                     type: string
                   path:
                     description: Path to kustomize files.
