--- a/config/crd/bases/git.gitops.slipway.org_gitrepos.yaml
+++ b/config/crd/bases/git.gitops.slipway.org_gitrepos.yaml
@@ -19,7 +19,7 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
-      description: GitRepo is the Schema for the gitrepoes API
+      description: GitRepo is the Schema for the gitrepos API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -36,22 +36,28 @@ spec:
         spec:
           description: GitRepoSpec defines the desired state of GitRepo
           properties:
+            gitpath:
+              description: GitPath determines how references should be parsed See
+                https://github.com/slipway-gitops/slipway#the-spec
+              type: string
             operations:
               description: 'Operations: list of Operations'
               items:
                 description: Operation defines how you should react to new Hash CRDS.
                 properties:
-                  cluster:
-                    description: Target cluster.
-                    type: string
+                  hashpath:
+                    description: HashPath adds a kustomize ref of the commit hash
+                      to the end of the Path
+                    type: boolean
                   operation:
                     description: Name of the operation.
                     type: string
                   optype:
                     description: Type of Operation kubebuilder:validation:MinLength=1
-                    type: string
-                  overlay:
-                    description: 'Overlay to run TODO: Add interpolation.'
+                    enum:
+                    - tag
+                    - branch
+                    - pull
                     type: string
                   path:
                     description: Path to kustomize files.
@@ -59,27 +65,61 @@ spec:
                   reference:
                     description: Type Reference
                     type: string
+                  referencetitle:
+                    description: Type Reference
+                    type: string
+                  transformers:
+                    description: Type tranformers
+                    items:
+                      description: Transformers are kustomize transformers available
+                        for contextual transformation that cannot be accomplished
+                        with normal kustomize manifests
+                      properties:
+                        key:
+                          description: Key value for tools like labels and annotations
+                          type: string
+                        type:
+                          description: Type of tranformer valid types annotations,
+                            images, labels, namespace, prefix, suffix
+                          type: string
+                        value:
+                          description: Value to use with transformer valid types are
+                            hash, pull, branch, tag
+                          type: string
+                      required:
+                      - type
+                      - value
+                      type: object
+                    type: array
                   weight:
                     description: Weight to determin order
                     format: int64
                     type: integer
                 required:
-                - cluster
                 - operation
                 - optype
                 - path
                 type: object
               type: array
-            security:
-              description: 'Security is security method to repo. TODO: some sort of
-                security access to git here'
-              type: string
+            store:
+              description: Store is a location to store operation artifacts after
+                they have been released
+              properties:
+                bucket:
+                  description: Bucket
+                  type: string
+                cloud:
+                  description: 'Cloud provider: aws, azure, gcp'
+                  type: string
+              required:
+              - bucket
+              - cloud
+              type: object
             uri:
               description: Uri is the location of the repo.
               type: string
           required:
           - operations
-          - security
           - uri
           type: object
         status:
@@ -88,80 +128,41 @@ spec:
             Sha:
               description: A list of pointers to all associated Hash CRDS.
               items:
-                description: Hash is the Schema for the hashes API
+                description: ObjectReference contains enough information to let you
+                  inspect or modify the referred object.
                 properties:
                   apiVersion:
-                    description: 'APIVersion defines the versioned schema of this
-                      representation of an object. Servers should convert recognized
-                      schemas to the latest internal value, and may reject unrecognized
-                      values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+                    description: API version of the referent.
+                    type: string
+                  fieldPath:
+                    description: 'If referring to a piece of an object instead of
+                      an entire object, this string should contain a valid JSON/Go
+                      field access statement, such as desiredState.manifest.containers[2].
+                      For example, if the object reference is to a container within
+                      a pod, this would take on a value like: "spec.containers{name}"
+                      (where "name" refers to the name of the container that triggered
+                      the event) or if no container name is specified "spec.containers[2]"
+                      (container with index 2 in this pod). This syntax is chosen
+                      only to have some well-defined way of referencing a part of
+                      an object. TODO: this design is not final and this field is
+                      subject to change in the future.'
                     type: string
                   kind:
-                    description: 'Kind is a string value representing the REST resource
-                      this object represents. Servers may infer this from the endpoint
-                      the client submits requests to. Cannot be updated. In CamelCase.
-                      More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                    description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
                     type: string
-                  metadata:
-                    type: object
-                  spec:
-                    description: HashSpec defines the desired state of Hash
-                    properties:
-                      gitrepo:
-                        description: Reference to parent GitRepo CRD.
-                        type: string
-                      operations:
-                        description: Operations to perform
-                        items:
-                          description: Operation defines how you should react to new
-                            Hash CRDS.
-                          properties:
-                            cluster:
-                              description: Target cluster.
-                              type: string
-                            operation:
-                              description: Name of the operation.
-                              type: string
-                            optype:
-                              description: Type of Operation kubebuilder:validation:MinLength=1
-                              type: string
-                            overlay:
-                              description: 'Overlay to run TODO: Add interpolation.'
-                              type: string
-                            path:
-                              description: Path to kustomize files.
-                              type: string
-                            reference:
-                              description: Type Reference
-                              type: string
-                            weight:
-                              description: Weight to determin order
-                              format: int64
-                              type: integer
-                          required:
-                          - cluster
-                          - operation
-                          - optype
-                          - path
-                          type: object
-                        type: array
-                      sha:
-                        description: Sha is the has of the commit.
-                        type: string
-                    required:
-                    - gitrepo
-                    - operations
-                    - sha
-                    type: object
-                  status:
-                    description: HashStatus defines the observed state of Hash
-                    properties:
-                      shastatus:
-                        description: ShaStatus replaced, removed, active
-                        type: string
-                    required:
-                    - shastatus
-                    type: object
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                    type: string
+                  namespace:
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                    type: string
+                  resourceVersion:
+                    description: 'Specific resourceVersion to which this reference
+                      is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                    type: string
+                  uid:
+                    description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                    type: string
                 type: object
               type: array
             lastSync:
