--- a/config/rbac/gitrepo_viewer_role.yaml
+++ b/config/rbac/gitrepo_viewer_role.yaml
@@ -1,4 +1,4 @@
-# permissions to do viewer gitrepoes.
+# permissions to do viewer gitrepos.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -7,7 +7,7 @@ rules:
 - apiGroups:
   - git.gitops.slipway.org
   resources:
-  - gitrepoes
+  - gitrepos
   verbs:
   - get
   - list
@@ -15,6 +15,6 @@ rules:
 - apiGroups:
   - git.gitops.slipway.org
   resources:
-  - gitrepoes/status
+  - gitrepos/status
   verbs:
   - get
