--- a/config/crd/bases/git.gitops.slipway.org_gitrepos.yaml
+++ b/config/crd/bases/git.gitops.slipway.org_gitrepos.yaml
@@ -66,7 +66,7 @@ spec:
                     description: Type Reference
                     type: string
                   referencetitle:
-                    description: Type Reference
+                    description: Type ReferenceTitle
                     type: string
                   transformers:
                     description: Type tranformers
@@ -108,12 +108,12 @@ spec:
                 bucket:
                   description: Bucket
                   type: string
-                cloud:
+                type:
                   description: 'Cloud provider: aws, azure, gcp'
                   type: string
               required:
               - bucket
-              - cloud
+              - type
               type: object
             uri:
               description: Uri is the location of the repo.
