--- a/hack/kind/cluster.yaml
+++ b/hack/kind/cluster.yaml
@@ -18,4 +18,6 @@ nodes:
   - role: control-plane
   - role: worker
   - role: worker
-  - role: worker
+networking:
+  disableDefaultCNI: true
+  podSubnet: 192.168.0.0/16
