--- a/config/crd/bases/git.gitops.slipway.org_gitrepos.yaml
+++ b/config/crd/bases/git.gitops.slipway.org_gitrepos.yaml
@@ -58,6 +58,7 @@ spec:
                     - tag
                     - branch
                     - pull
+                    - highesttag
                     type: string
                   path:
                     description: Path to kustomize files.
