--- a/config/crd/bases/git.gitops.slipway.org_hashes.yaml
+++ b/config/crd/bases/git.gitops.slipway.org_hashes.yaml
@@ -56,6 +56,7 @@ spec:
                     - tag
                     - branch
                     - pull
+                    - highesttag
                     type: string
                   path:
                     description: Path to kustomize files.
